# sd-jwt-crash-course

./: README.md  explain.py  issuance_demo.py  pyproject.toml  sd-yacht.ipynb
