[tool.poetry]
name = "sd-jwt-demo"
version = "0.1.0"
description = ""
authors = ["Clément Humbert <clement.humbert@sicpa.com>"]
readme = "README.md"
packages = [{include = "sd_jwt_demo"}]

[tool.poetry.dependencies]
python = "^3.9"
sd-jwt = "^0.10.3"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

